# flutter_engine

./: .gn  BUILD.gn  DEPS  pubspec.yaml
assets/: BUILD.gn  asset_manager.cc  asset_manager.h  asset_resolver.h  directory_asset_bundle.cc  directory_asset_bundle.h
benchmarking/: BUILD.gn  benchmarking.cc
build_overrides/: angle.gni  build.gni  glslang.gni  spirv_tools.gni  swiftshader.gni  vulkan_headers.gni  vulkan_loader.gni  vulkan_tools.gni  vulkan_utility_libraries.gni  vulkan_validation_layers.gni  wayland.gni
common/: BUILD.gn  config.gni  fuchsia_config.gni  settings.cc  settings.h  task_runners.cc  task_runners.h
display_list/: BUILD.gn  display_list.cc  display_list.h  display_list_unittests.cc  dl_blend_mode.cc  dl_builder.cc  dl_builder.h  dl_canvas.cc  dl_canvas.h  dl_color.h  dl_color_unittests.cc  dl_op_flags.cc  dl_op_flags.h  dl_op_receiver.cc  dl_op_receiver.h  dl_op_records.cc  dl_op_records.h  dl_paint.cc  dl_paint.h  dl_paint_unittests.cc  dl_vertices.cc  dl_vertices.h  dl_vertices_unittests.cc
engine/: BUILD.gn
engine_build/: bin_to_obj.gni  zip_bundle.gni
engine_build_overrides/: angle.gni  build.gni  spirv_tools.gni  vulkan_validation_layers.gni
engine_tools/: gn  pub_get_offline.py
examples/vulkan_glfw/: BUILD.gn
flow/: BUILD.gn  compositor_context.cc  compositor_context.h  diff_context.cc  diff_context.h  diff_context_unittests.cc  embedded_view_params_unittests.cc  embedded_views.cc  embedded_views.h  flow_run_all_unittests.cc  frame_timings.cc  frame_timings.h  frame_timings_recorder_unittests.cc  gl_context_switch_unittests.cc  mutators_stack_unittests.cc  paint_region.cc  paint_region.h  paint_utils.cc  paint_utils.h  raster_cache.cc  raster_cache.h  raster_cache_item.h  raster_cache_key.cc  raster_cache_key.h  raster_cache_unittests.cc  raster_cache_util.cc  raster_cache_util.h  skia_gpu_object.h  skia_gpu_object_unittests.cc  stopwatch.cc  stopwatch.h  stopwatch_dl.cc  stopwatch_dl_unittests.cc  stopwatch_sk.cc  stopwatch_unittests.cc  surface.cc  surface.h  surface_frame.cc  surface_frame.h  surface_frame_unittests.cc  (+3 more)
flutter_frontend_server/: BUILD.gn
flutter_vma/: BUILD.gn  flutter_skia_vma.cc  flutter_skia_vma.h  flutter_vma.cc
fml/: BUILD.gn  ascii_trie_unittests.cc  backtrace.cc  backtrace.h  backtrace_stub.cc  base32.cc  base32.h  base32_unittest.cc  closure.h  command_line.h  command_line_unittest.cc  concurrent_message_loop.cc  concurrent_message_loop.h  concurrent_message_loop_factory.cc  container_unittests.cc  cpu_affinity.cc  endianness.h  endianness_unittests.cc  file_unittest.cc  hash_combine_unittests.cc  hex_codec.cc  hex_codec_unittest.cc  icu_util.cc  icu_util.h  log_settings.cc  log_settings.h  logging.cc  logging.h  logging_unittests.cc  mapping_unittests.cc  math_unittests.cc  message_loop.cc  message_loop_task_queues.cc  message_loop_task_queues.h  message_loop_task_queues_benchmark.cc  message_loop_task_queues_merge_unmerge_unittests.cc  message_loop_task_queues_unittests.cc  message_loop_unittests.cc  paths_unittests.cc  raster_thread_merger.h  (+13 more)
impeller/: BUILD.gn
impeller/shader_bundle/: BUILD.gn
impeller/tools/: args.gni  compiler.gni  component.gni  embed_blob.gni  impeller.gni  malioc.gni  metal_library.gni  scene.gni  shader_archive.gni  shaders.gni  shaders_gles.gni  shaders_mtl.gni  shaders_vk.gni
runtime/: BUILD.gn  dart_isolate.cc  dart_isolate.h  dart_isolate_group_data.cc  dart_isolate_group_data.h  dart_isolate_unittests.cc  dart_lifecycle_unittests.cc  dart_plugin_registrant.cc  dart_plugin_registrant_unittests.cc  dart_service_isolate.cc  dart_service_isolate_unittests.cc  dart_snapshot.cc  dart_snapshot.h  dart_timestamp_provider.h  dart_vm.cc  dart_vm.h  dart_vm_data.cc  dart_vm_data.h  dart_vm_initializer.cc  dart_vm_lifecycle.cc  dart_vm_lifecycle.h  dart_vm_unittests.cc  embedder_resources.cc  isolate_configuration.cc  isolate_configuration.h  no_dart_plugin_registrant_unittests.cc  platform_data.cc  platform_data.h  platform_isolate_manager.cc  platform_isolate_manager_unittests.cc  ptrace_check.cc  ptrace_check.h  runtime_controller.cc  runtime_controller.h  runtime_delegate.cc  runtime_delegate.h  service_protocol.cc  service_protocol.h  skia_concurrent_executor.cc  skia_concurrent_executor.h  (+2 more)
shell/: config.gni
shell/gpu/: BUILD.gn  gpu_surface_gl_delegate.cc  gpu_surface_gl_delegate.h  gpu_surface_gl_impeller.cc  gpu_surface_gl_impeller.h  gpu_surface_gl_skia.cc  gpu_surface_gl_skia.h  gpu_surface_metal_delegate.cc  gpu_surface_metal_delegate.h  gpu_surface_metal_impeller.h  gpu_surface_metal_skia.h  gpu_surface_software.cc  gpu_surface_software.h  gpu_surface_software_delegate.cc  gpu_surface_software_delegate.h  gpu_surface_vulkan.cc  gpu_surface_vulkan.h  gpu_surface_vulkan_delegate.cc  gpu_surface_vulkan_delegate.h  gpu_surface_vulkan_impeller.cc  gpu_surface_vulkan_impeller.h
shell/platform/fuchsia/dart-pkg/fuchsia/: BUILD.gn
shell/platform/fuchsia/dart-pkg/fuchsia/sdk_ext/: fuchsia.cc
shell/testing/: BUILD.gn  tester_main.cc
skia/: BUILD.gn
testing/: BUILD.gn  assertions_skia.cc  autoreleasepool_test.h  canvas_test.h  dart_fixture.cc  dart_fixture.h  dart_isolate_runner.cc  dart_isolate_runner.h  debugger_detection.cc  debugger_detection.h  display_list_testing.cc  display_list_testing.h  elf_loader.cc  elf_loader.h  fixture_test.cc  fixture_test.h  logger_listener.cc  logger_listener.h  mock_canvas.cc  mock_canvas.h  mock_canvas_unittests.cc  post_task_sync.cc  post_task_sync.h  run_all_unittests.cc  run_tests.py  stream_capture.cc  test_args.cc  test_args.h  test_dart_native_resolver.cc  test_dart_native_resolver.h  test_gl_surface.cc  test_gl_surface.h  test_metal_surface.cc  test_metal_surface.h  test_metal_surface_impl.h  test_metal_surface_unittests.cc  test_timeout_listener.cc  test_timeout_listener.h  test_vulkan_context.cc  test_vulkan_context.h  (+9 more)
tools/: gn
vulkan/: BUILD.gn  vulkan_application.cc  vulkan_application.h  vulkan_backbuffer.cc  vulkan_backbuffer.h  vulkan_command_buffer.cc  vulkan_command_buffer.h  vulkan_debug_report.h  (+16 more)
(+1535 files in other folders)
