# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("default") {
  testonly = true
  if (target_os == "wasm") {
    deps = [ "//wasm" ]
  } else {
    deps = [ "//engine" ]
  }
}

group("dist") {
  testonly = true

  if (target_os == "wasm") {
    deps = [ "//wasm" ]
  } else {
    deps = [ "//engine:dist" ]
  }
}
