# Copyright 2013 The Flutter Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# Global configuration options for Impeller.
import("//impeller/tools/args.gni")

# The common template used by all Impeller components.
import("//impeller/tools/component.gni")

# Templates for compiling, reflecting, and packaging shaders used by Impeller.
import("//impeller/tools/shaders.gni")

# Templates for the experimental 3D renderer.
import("//impeller/tools/scene.gni")
